Resolves: tdf#136161 select all on grab-focus for GtkComboBox-alike widget

Change-Id: Ib1b6ebaf95cd8e79ea0ba945407f321148e6525c