vcl/unx/gtk3/gtk3gtkinst.cxx
@@ -14305,7 +14305,7 @@ public:
     {
         disable_notify_events();
         if (m_pEntry)
-            gtk_entry_grab_focus_without_selecting(GTK_ENTRY(m_pEntry));
+            gtk_widget_grab_focus(m_pEntry);
         else
             gtk_widget_grab_focus(m_pToggleButton);
         enable_notify_events();
